--- a/src/app/kontakt/contact.css
+++ b/src/app/kontakt/contact.css
@@ -71,6 +71,10 @@
   color: #333333;
 }
 
+.form_text_area:active {
+  outline: #d21e00;
+}
+
 .small_forms {
   width: 100%;
   margin-top: 1.4rem;
@@ -104,7 +108,6 @@
   border-radius: 10em;
   transition: background-color 0.2s;
   padding: 10px;
-
 }
 
 /* section_secound */
@@ -793,7 +796,7 @@ a.map_play:hover {
   a.map_play {
     justify-content: center;
   }
-  .map_button .nasiBtn{
+  .map_button .nasiBtn {
     display: block;
     margin: 0 0 30px;
   }
