--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -394,6 +394,7 @@ h6 {
 }
 
 .projects-oferta-veggo-cont {
+  display: flex;
   position: relative;
   max-width: 762px;
   margin: 0 auto;
@@ -405,7 +406,7 @@ h6 {
 
 .projects-oferta-veggo-bg {
   height: 550px;
-  position: absolute;
+  /* position: absolute; */
   top: -3%;
   right: 0px;
 }
