--- a/src/app/kontakt/contact.css
+++ b/src/app/kontakt/contact.css
@@ -337,7 +337,7 @@ a.card_btn:hover {
   width: 95%;
   border-radius: 4%;
   margin-top: 4rem;
-  position: relative;
+  /* position: relative; */
 }
 
 .right_box_bottom img {
@@ -451,109 +451,152 @@ a.map_play:hover {
 .plus_icon_container {
   border: 1px solid #d21e00;
   width: 25px;
+  height: 25px;
   border-radius: 100%;
   text-align: center;
   color: #d21e00;
   position: absolute;
-  /* box-shadow: 0 0 10px rgba(210, 22, 0, 0.3);
-  animation: blink 1s infinite alternate; */
+  background: white;
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.plus_icon_container svg {
-  font-size: 14px;
+.glow {
+  animation: mymove 1s infinite;
+  animation-delay: 1s;
 }
 
-/* @keyframes blink {
+.plus_icon_container::before {
+  content: "";
+  height: 100%;
+  width: 100%;
+  background: #ff000070;
+  /* animation: mymove 2s infinite; */
+  /* animation-delay: 1s; */
+  position: absolute;
+  border-radius: 100%;
+}
+
+.plus_icon_container span {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+@keyframes mymove {
   0% {
-    box-shadow: 0 0 10px rgba(210, 22, 0, 0.3);
+    transform: scale(1);
+    /* Initial scale */
+  }
+
+  50% {
+    transform: scale(1.2);
+    /* Scale to 120% of the original size */
+  }
+
+  100% {
+    transform: scale(1);
+    /* Return to original scale */
+  }
+}
+
+/* @keyframes mymove {
+  0% {
+    box-shadow: 0px 0px 0px #d21e00;
+  }
+  50% {
+    box-shadow: 0px 0px 20px #ff2600, 0px 0px 20px #ff2600;
   }
   100% {
-    box-shadow: 0 0 20px rgba(210, 22, 0, 1);
+    box-shadow: 0px 0px 20px #d21e00;
   }
 } */
+
+
 .plus_icon_container.active {
   background: red;
   color: white;
 }
 
 .icon1 {
-  top: -40px;
-  left: 135px;
+  top: -50px;
+  left: 85px;
 }
 
 .icon2 {
-  top: -78px;
-  left: 245px;
+  top: -14%;
+  left: 46%;
 }
 
 .icon3 {
-  top: -52px;
-  left: 375px;
+  top: -8%;
+  left: 63%;
 }
 
 .icon4 {
-  top: 75px;
-  left: 115px;
+  top: 15%;
+  left: 24%;
 }
 
 .icon5 {
-  top: 72px;
-  left: 205px;
+  top: 10%;
+  left: 28%;
 }
 
 .icon6 {
-  top: 12px;
-  left: 265px;
+  top: 0%;
+  left: 43%;
 }
 
 .icon7 {
-  top: 62px;
-  left: 385px;
+  top: 60px;
+  left: 395px;
 }
 
 .icon8 {
-  top: 0px;
-  left: 472px;
+  top: 25px;
+  left: 506px;
 }
 
 .icon9 {
-  top: 156px;
-  left: 169px;
+  top: 150px;
+  left: 187px;
 }
 
 .icon10 {
-  top: 122px;
-  left: 313px;
+  top: 100px;
+  left: 310px;
 }
 
 .icon11 {
-  top: 195px;
-  left: 236px;
+  top: 175px;
+  left: 240px;
 }
 
 .icon12 {
-  top: 222px;
-  left: 285px;
+  top: 205px;
+  left: 295px;
 }
 
 .icon13 {
-  top: 258px;
-  left: 350px;
+  top: 255px;
+  left: 340px;
 }
 
 .icon14 {
-  top: 188px;
-  left: 375px;
+  top: 178px;
+  left: 365px;
 }
 
 .icon15 {
-  top: 145px;
-  left: 475px;
+  top: 125px;
+  left: 450px;
 }
 
 .icon16 {
-  top: 250px;
-  left: 440px;
+  top: 260px;
+  left: 450px;
 }
 
 /* mod styles after dynamic data */
@@ -577,11 +620,105 @@ a.map_play:hover {
   align-items: center;
   min-height: 100vh;
 }
+
 .map_container {
   position: relative;
 }
 
 /* -------------------------------media screen---------------------- */
+@media screen and (max-width: 1360px) {
+  .right_box_bottom img {
+    width: 25rem;
+    margin: -150px 0 0 10px;
+  }
+
+  .plus_icon_container {
+    width: 20px;
+    height: 20px;
+  }
+
+  .icon1 {
+    top: -80px;
+    left: 43px;
+  }
+
+  .icon2 {
+    top: -18%;
+    left: 43%;
+  }
+
+  .icon3 {
+    top: -12%;
+    left: 59%;
+  }
+
+  .icon4 {
+    top: 5%;
+    left: 19%;
+  }
+
+  .icon5 {
+    top: 1%;
+    left: 25%;
+  }
+
+  .icon6 {
+    top: -6%;
+    left: 41%;
+  }
+
+  .icon7 {
+    top: 0px;
+    left: 275px;
+  }
+
+  .icon8 {
+    top: -25px;
+    left: 353px;
+  }
+
+  .icon9 {
+    top: 80px;
+    left: 119px;
+  }
+
+  .icon10 {
+    top: 37px;
+    left: 208px;
+  }
+
+  .icon11 {
+    top: 93px;
+    left: 155px;
+  }
+
+  .icon12 {
+    top: 108px;
+    left: 199px;
+  }
+
+  .icon13 {
+    top: 145px;
+    left: 230px;
+  }
+
+  .icon14 {
+    top: 88px;
+    left: 247px;
+  }
+
+  .icon15 {
+    top: 55px;
+    left: 310px;
+  }
+
+  .icon16 {
+    top: 150px;
+    left: 310px;
+  }
+
+}
+
 @media screen and (max-width: 1024px) {
   .first_heading_txt {
     margin-bottom: 70px;
@@ -619,6 +756,92 @@ a.map_play:hover {
   .first_sect_p {
     margin: 0 0 40px;
   }
+
+  .right_box_bottom img {
+    width: 34rem;
+    margin: -150px 0 0 40px;
+  }
+
+  .icon1 {
+    top: -50px;
+    left: 85px;
+  }
+
+  .icon2 {
+    top: -14%;
+    left: 43%;
+  }
+
+  .icon3 {
+    top: -8%;
+    left: 63%;
+  }
+
+  .icon4 {
+    top: 15%;
+    left: 24%;
+  }
+
+  .icon5 {
+    top: 10%;
+    left: 28%;
+  }
+
+  .icon6 {
+    top: 0%;
+    left: 43%;
+  }
+
+  .icon7 {
+    top: 60px;
+    left: 395px;
+  }
+
+  .icon8 {
+    top: 25px;
+    left: 506px;
+  }
+
+  .icon9 {
+    top: 150px;
+    left: 187px;
+  }
+
+  .icon10 {
+    top: 100px;
+    left: 310px;
+  }
+
+  .icon11 {
+    top: 175px;
+    left: 240px;
+  }
+
+  .icon12 {
+    top: 205px;
+    left: 295px;
+  }
+
+  .icon13 {
+    top: 255px;
+    left: 340px;
+  }
+
+  .icon14 {
+    top: 178px;
+    left: 365px;
+  }
+
+  .icon15 {
+    top: 125px;
+    left: 450px;
+  }
+
+  .icon16 {
+    top: 260px;
+    left: 450px;
+  }
+
 }
 
 /* -------------------------------media screen---------------------- */
@@ -716,8 +939,8 @@ a.map_play:hover {
   }
 
   .right_box_bottom img {
-    width: 100%;
-    margin: -150px 0 0 00px;
+    width: 20rem;
+    margin: -90px 0 0 0px;
   }
 
   .plus_icon_container {
@@ -731,83 +954,83 @@ a.map_play:hover {
   }
 
   .icon1 {
-    top: -70px;
-    left: 45px;
+    top: -30px;
+    left: 25px;
   }
 
   .icon2 {
-    top: -98px;
-    left: 136px;
+    top: -58px;
+    left: 132px;
   }
 
   .icon3 {
-    top: -83px;
-    left: 215px;
+    top: -33px;
+    left: 185px;
   }
 
   .icon4 {
-    top: 0px;
-    left: 45px;
+    top: 55px;
+    left: 51px;
   }
 
   .icon5 {
-    top: -8px;
-    left: 104px;
+    top: 35px;
+    left: 74px;
   }
 
   .icon6 {
-    top: -41px;
-    left: 151px;
+    top: -0px;
+    left: 126px;
   }
 
   .icon7 {
-    top: 0px;
-    left: 230px;
+    top: 30px;
+    left: 200px;
   }
 
   .icon8 {
-    top: -50px;
-    left: 282px;
+    top: 10px;
+    left: 272px;
   }
 
   .icon9 {
-    top: 55px;
-    left: 76px;
+    top: 85px;
+    left: 88px;
   }
 
   .icon10 {
-    top: 32px;
-    left: 179px;
+    top: 60px;
+    left: 160px;
   }
 
   .icon11 {
-    top: 71px;
-    left: 130px;
+    top: 105px;
+    left: 116px;
   }
 
   .icon12 {
-    top: 102px;
-    left: 157px;
+    top: 112px;
+    left: 154px;
   }
 
   .icon13 {
-    top: 118px;
-    left: 210px;
+    top: 143px;
+    left: 170px;
   }
 
   .icon14 {
-    top: 108px;
-    left: 265px;
+    top: 104px;
+    left: 192px;
   }
 
   .icon15 {
-    top: 43px;
-    left: 285px;
+    top: 73px;
+    left: 244px;
   }
 
   .icon16 {
-    top: 70px;
-    left: 220px;
+    top: 150px;
+    left: 240px;
   }
 
   .map_button {
