--- a/src/components/organisms/strategia-marketingowa/accordion/yes.css
+++ b/src/components/organisms/strategia-marketingowa/accordion/yes.css
@@ -1,89 +1,95 @@
 .faqContainer {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 70px 0;
+  max-width: 690px;
+  margin: 0 auto;
+  margin-bottom: 200px;
 }
 .faqContainer .svg-inline--fa {
-    height: 14px;
-    font-weight: 300;
-    border: 1px solid gray;
-    padding: 7px;
-    border-radius: 100%;
+  height: 14px;
+  font-weight: 300;
+  border: 0.5px solid #cecece;
+  padding: 4px;
+  border-radius: 100%;
 }
 .accordion-item {
-    /* border-bottom: 0.5px solid #b9b9b9; */
-    padding: 15px 20px 15px 20px;
+  padding: 15px 20px 15px 20px;
+  border-bottom: 0.5px solid #cecece;
 }
 .accordion-title {
-    display: flex;
-    justify-content: space-between;
-    font-size: 26px;
-    font-weight: 400;
-    min-height: 80px;
-    
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 22px;
+  font-weight: 400;
+  gap: 47px;
 }
-.faqContainer .accordion-item{
-    position: relative;
+.faqContainer .accordion-item {
+  position: relative;
 }
 
 .faqContainer .accordion-item:hover:before {
-    width: 100%;
+  width: 100%;
 }
 .faqContainer .accordion-item:nth-child(1):before {
-    background-color: #fff;
+  background-color: #fff;
 }
 .faqContainer .accordion-item:before {
-    content: "";
-    position: absolute;
-    width: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    background-color: #fff;
-    pointer-events: none;
-    z-index: -1;
-    -webkit-transition: width 0.3s ease-in-out;
-    -o-transition: width 0.3s ease-in-out;
-    transition: width 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  width: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #fff;
+  pointer-events: none;
+  z-index: -1;
+  -webkit-transition: width 0.3s ease-in-out;
+  -o-transition: width 0.3s ease-in-out;
+  transition: width 0.3s ease-in-out;
 }
 
 .faqContainer a > span > span {
-    background: white;
-    padding: 30px;
-    margin: 3px;
-    border-radius: 60px;
-    color: #333;
-    text-decoration: none;
-    font-size: min(3.5vw, 30px);
-    font-family: arial;
-    font-weight: bold;
+  background: white;
+  padding: 30px;
+  margin: 3px;
+  border-radius: 60px;
+  color: #333;
+  text-decoration: none;
+  font-size: min(3.5vw, 30px);
+  font-family: arial;
+  font-weight: bold;
 }
-.faqContainer  a {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 100px;
-    text-decoration: none;
-    border-radius: 60px;
-    background: #fff;
-    background: linear-gradient(90deg, #ffc700 0%, #ee8aa1 50%, #1ec19b 100%);
-    display: inline-flex;
+.faqContainer a {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 100px;
+  text-decoration: none;
+  border-radius: 60px;
+  background: #fff;
+  background: linear-gradient(90deg, #ffc700 0%, #ee8aa1 50%, #1ec19b 100%);
+  display: inline-flex;
 }
-.faqContainer  a > span {
-    transform: translate(-10px, -10px);
-    transition: transform 0.5s;
-    border-radius: 60px;
-    background: #fff;
-    background: linear-gradient(90deg, #ffc700 0%, #ee8aa1 50%, #1ec19b 100%);
-    padding: 2px 2px;
-    display: inline-flex;
+.faqContainer a > span {
+  transform: translate(-10px, -10px);
+  transition: transform 0.5s;
+  border-radius: 60px;
+  background: #fff;
+  background: linear-gradient(90deg, #ffc700 0%, #ee8aa1 50%, #1ec19b 100%);
+  padding: 2px 2px;
+  display: inline-flex;
 }
-.faqContainer  a > span:hover {
-    transform: translate(0px, 0px);
+.faqContainer a > span:hover {
+  transform: translate(0px, 0px);
 }
 h2.textAnimation {
-    font-size: 50px;
-    font-weight: 600;
-    text-align: center;
-    margin: 0 0 50px;
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0 0 50px;
+}
+
+.yes_accordion_animated_text span {
+  font-weight: 700;
+  color: white;
+  font-size: 32px;
 }
